# rust-cpp-ffi

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
CppDll/: CMakeLists.txt
CppDll/CppDll/: CMakeLists.txt  CppDll.cc  CppDll.h
CppDll/Main/: CMakeLists.txt  Main.cc
RustWrapper/: Cargo.toml  build.rs
RustWrapper/src/: cpp_dll_wrapper.rs  main.rs
RustWrapper/src/cpp_dll_wrapper/: cpp_dll_api.rs
